@@ -43,9 +43,10 @@ describe '389ds' do
     }
 
     class { 'nsswitch':
-      passwd => ['sss', 'files'],
-      group  => ['sss', 'files'],
-      shadow => ['sss', 'files'],
+      passwd  => ['sss', 'files'],
+      group   => ['sss', 'files'],
+      shadow  => ['sss', 'files'],
+      sudoers => ['files', 'sss']
     }
     EOS
   }
@@ -84,8 +85,13 @@ describe '389ds' do
             expect(id.stdout).to match(/#{user}/)
           end
         end
-      end
 
+        it 'should run sssd-sudo after querying for sudo rules' do
+          on(client, 'sudo -l')
+          response = YAML.safe_load(on(client, %(puppet resource service sssd-sudo --to_yaml)).stdout)
+          expect(response['service']['sssd-sudo']['ensure']).to eq('running')
+        end
+      end
     end
   end
 end
